<resources>
    <string name="app_name" translatable="false">justBarAdmin</string>
    <string name="const_empty_cocktails">Add some cocktails to be shown</string>

    <!-- Const text -->
    <string name="const_detail_title">Add Cocktail</string>
    <string name="const_list_title">All Cocktails</string>
    <string name="const_is_iba">Is IBA?</string>
    <string name="const_taste">Taste</string>
    <string name="const_glass_type">Glass Type</string>
    <string name="const_alcohol">Alcohol</string>
    <string name="const_ingredients">Ingredients</string>
    <string name="const_extra">Extra recipe</string>
    <string name="const_common_cocktails">Common cocktails</string>
    <string name="const_recipe">Recipe</string>
    <string name="const_manual">Manual Input</string>
    <string name="const_json">Upload JSON</string>

    <!-- Formats -->
    <string name="format_alc">alc: </string>
    <string name="format_taste">taste: </string>
    <string name="format_alc_percentage" translatable="false">~%s°</string>
    <string name="format_millis">%sml</string>

    <!-- Hints -->
    <string name="hint_login">Login (e-mail)</string>
    <string name="hint_password">Password</string>
    <string name="hint_cocktail_title">Cocktail Title</string>
    <string name="hint_recipe">Recipe</string>
    <string name="hint_alcohol_per">Alcohol percentage</string>
    <string name="hint_volume">Volume</string>

    <!-- Buttons -->
    <string name="btn_login">Login</string>
    <string name="btn_add">Add</string>
    <string name="btn_save">Accept</string>

    <!-- Taste Enum values -->
    <string name="taste_sweet">Sweet</string>
    <string name="taste_sour">Sour</string>
    <string name="taste_sweet_sour">Sweet-Sour</string>
    <string name="taste_strong">Strong</string>
    <string name="taste_salty">Salty</string>
    
    <!-- Dialogs -->
    <string name="dialog_title_error">Error occurred</string>
    <string name="dialog_title_delete_ingredient">Delete ingredient?</string>
    <string name="dialog_delete_ingredient">Are you sure you want to remove ingredient «%s»?</string>
    <string name="dialog_title_delete_alcohol">Delete alcohol?</string>
    <string name="dialog_delete_alcohol">Are you sure you want to remove alcohol «%s»?</string>
    <string name="dialog_title_delete_recipe">Delete recipe?</string>
    <string name="dialog_delete_recipe">Are you sure you want to remove recipe?</string>
    <string name="dialog_title_delete_cocktail">Delete cocktail?</string>
    <string name="dialog_delete_cocktail">Are you sure you want to remove cocktail «%s»?</string>
    <string name="dialog_permission_title">Permission</string>
    <string name="dialog_permission_denied">You may not use some app\'s functional without this permission.</string>


    <!-- Toasts -->
    <string name="toast_write_success">Cloud Database performed successfully</string>
    <string name="toast_login">Login performed successfully</string>
    <string name="toast_register">Register performed successfully</string>
    <string name="toast_json_error">JSON failed to load</string>
    <string name="toast_json_success">JSON successfully loaded</string>

    <!-- Error -->
    <string name="err_empty_title">Empty title</string>
    <string name="err_empty_recipe">Empty recipe</string>
    <string name="err_empty_alcohol">Empty alcohol</string>
    <string name="err_empty_volume">Empty volume</string>

    <!-- Arrays -->
    <string-array name="tastes">
        <item>Sweet</item>
        <item>Sour</item>
        <item>Sweet-Sour</item>
        <item>Strong</item>
        <item>Salty</item>
    </string-array>

    <string-array name="glasses">
        <item>Short</item>
        <item>Middle</item>
        <item>Long</item>
    </string-array>
</resources>
