<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/background_main">

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"

            style="@style/inputTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:hint="@string/hint_login"

                tools:text="Some Login"
                style="@style/inputText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="12dp"

            style="@style/inputTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:inputType="textPassword"

                android:hint="@string/hint_password"
                tools:text="Some Login"
                style="@style/inputText" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"

        app:layout_constraintTop_toBottomOf="@+id/layout_login"
        app:layout_constraintEnd_toEndOf="parent"

        android:drawableEnd="@drawable/ic_arrow_forward"
        android:background="@null"
        android:backgroundTint="@null"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        android:fontFamily="@font/gilroy_regular"
        android:textSize="16sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
