<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/background_main">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:text="@string/const_detail_title"

        android:textAlignment="center"
        android:textSize="18sp"
        android:fontFamily="@font/gilroy_regular"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"

        android:src="@drawable/ic_arrow_back"

        android:background="@null"
        android:backgroundTint="@null"

        app:layout_constraintTop_toTopOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"

        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_save">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_cocktail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="12dp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                style="@style/inputTextLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_cocktail_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:inputType="textCapSentences"

                    android:hint="@string/hint_cocktail_title"
                    tools:text="Some Title"
                    style="@style/inputText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="12dp"

                app:layout_constraintTop_toBottomOf="@+id/til_cocktail_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                style="@style/inputTextLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_recipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="textCapSentences"

                    android:hint="@string/hint_recipe"
                    tools:text="Some Recipe"
                    style="@style/inputText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_alcohol_per"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="12dp"

                app:layout_constraintTop_toBottomOf="@+id/til_recipe"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                style="@style/inputTextLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_alcohol_per"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="number"

                    android:hint="@string/hint_alcohol_per"
                    tools:text="30"
                    style="@style/inputText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_volume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="12dp"

                app:layout_constraintTop_toBottomOf="@+id/til_alcohol_per"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                style="@style/inputTextLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_volume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="number"

                    android:hint="@string/hint_volume"
                    tools:text="128"
                    style="@style/inputText" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_iba"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"

                app:layout_constraintTop_toTopOf="@+id/switch_iba"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/switch_iba"

                android:text="@string/const_is_iba"

                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/gilroy_regular"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_iba"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12sp"
                android:paddingEnd="12dp"

                app:trackTint="@color/secondary"

                app:layout_constraintTop_toBottomOf="@+id/til_volume"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_const_taste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"

                app:layout_constraintTop_toBottomOf="@+id/switch_iba"
                app:layout_constraintStart_toStartOf="parent"

                android:text="@string/const_taste"
                android:textColor="@color/white"
                android:fontFamily="@font/gilroy_regular"
                android:textSize="16sp"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_taste"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="12dp"
                android:padding="8dp"

                android:background="@drawable/background_rectangle"
                android:backgroundTint="@color/white"

                app:layout_constraintTop_toBottomOf="@+id/tv_const_taste"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                android:entries="@array/tastes"/>

            <TextView
                android:id="@+id/tv_const_glass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"

                app:layout_constraintTop_toBottomOf="@+id/spinner_taste"
                app:layout_constraintStart_toStartOf="parent"

                android:text="@string/const_glass_type"
                android:textColor="@color/white"
                android:fontFamily="@font/gilroy_regular"
                android:textSize="16sp"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_glass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="12dp"
                android:padding="8dp"

                android:background="@drawable/background_rectangle"
                android:backgroundTint="@color/white"

                app:layout_constraintTop_toBottomOf="@+id/tv_const_glass"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                android:entries="@array/glasses"/>

            <TextView
                android:id="@+id/tv_const_alcohol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"

                app:layout_constraintTop_toTopOf="@+id/btn_add_alcohol"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/btn_add_alcohol"

                android:text="@string/const_alcohol"
                android:textColor="@color/white"
                android:fontFamily="@font/gilroy_regular"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/btn_add_alcohol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"

                app:layout_constraintTop_toBottomOf="@+id/spinner_glass"
                app:layout_constraintEnd_toEndOf="parent"

                android:background="@drawable/background_rectangle"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_add"

                android:text="@string/btn_add"
                android:textSize="14sp"
                android:fontFamily="@font/gilroy_semibold"
                android:textColor="@color/main"
                android:gravity="center_vertical"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_alcohol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="4dp"

                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_ingredient"
                tools:itemCount="3"

                app:layout_constraintTop_toBottomOf="@+id/btn_add_alcohol"/>

            <TextView
                android:id="@+id/tv_const_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"

                app:layout_constraintTop_toTopOf="@+id/btn_add_ingredient"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/btn_add_ingredient"

                android:text="@string/const_ingredients"
                android:textColor="@color/white"
                android:fontFamily="@font/gilroy_regular"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/btn_add_ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"

                app:layout_constraintTop_toBottomOf="@+id/rv_alcohol"
                app:layout_constraintEnd_toEndOf="parent"

                android:background="@drawable/background_rectangle"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_add"

                android:text="@string/btn_add"
                android:textSize="14sp"
                android:fontFamily="@font/gilroy_semibold"
                android:textColor="@color/main"
                android:gravity="center_vertical"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_ingredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="4dp"

                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_ingredient"
                tools:itemCount="3"

                app:layout_constraintTop_toBottomOf="@+id/btn_add_ingredient"/>

            <TextView
                android:id="@+id/tv_const_extra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"

                app:layout_constraintTop_toTopOf="@+id/btn_add_extra"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/btn_add_extra"

                android:text="@string/const_extra"
                android:textColor="@color/white"
                android:fontFamily="@font/gilroy_regular"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/btn_add_extra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"

                app:layout_constraintTop_toBottomOf="@+id/rv_ingredient"
                app:layout_constraintEnd_toEndOf="parent"

                android:background="@drawable/background_rectangle"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_add"

                android:text="@string/btn_add"
                android:textSize="14sp"
                android:fontFamily="@font/gilroy_semibold"
                android:textColor="@color/main"
                android:gravity="center_vertical"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_extra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="4dp"

                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_recipe"
                tools:itemCount="2"

                app:layout_constraintTop_toBottomOf="@+id/btn_add_extra"/>

            <TextView
                android:id="@+id/tv_const_common_cocktails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"

                app:layout_constraintTop_toTopOf="@+id/btn_add_common_cocktail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/btn_add_common_cocktail"

                android:text="@string/const_common_cocktails"
                android:textColor="@color/white"
                android:fontFamily="@font/gilroy_regular"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/btn_add_common_cocktail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"

                app:layout_constraintTop_toBottomOf="@+id/rv_extra"
                app:layout_constraintEnd_toEndOf="parent"

                android:background="@drawable/background_rectangle"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_add"

                android:text="@string/btn_add"
                android:textSize="14sp"
                android:fontFamily="@font/gilroy_semibold"
                android:textColor="@color/main"
                android:gravity="center_vertical"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_common_cocktails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="4dp"

                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_common_cocktail"
                tools:itemCount="2"

                app:layout_constraintTop_toBottomOf="@+id/btn_add_common_cocktail"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@null"
        android:backgroundTint="@null"

        app:layout_constraintBottom_toBottomOf="parent"

        android:text="@string/btn_save"
        android:textColor="@color/white"
        android:fontFamily="@font/gilroy_regular"
        android:textSize="16sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
